--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Ceviche+One|Creepster|Frijole|Rationale|Spicy+Rice|Syncopate|Roboto" rel="stylesheet">
+    <script src="https://use.fontawesome.com/806a6b6224.js"></script>
     <title>MEMER | Memerize Your Images</title>
   </head>
   <body>
