--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Bangers|Ceviche+One|Creepster|Frijole|Rationale|Spicy+Rice|Syncopate|Roboto" rel="stylesheet">
     <script src="https://use.fontawesome.com/806a6b6224.js"></script>
+    <script src="https://api.pexels.com/v1/search" crossorigin="anonymous"></script>
     <title>MEMER | Memerize Your Images</title>
   </head>
   <body>
